2009-11-30  John W. Eaton  <jwe@octave.org>

	* interpreter/munge-texi.cc (process_texi_input_file): Double @ in
	symbol_name used in @anchor.
	(extract_docstring): Double @ in function name used in @ref.

	* interpreter/mk_doc_cache.m (cmd): Transform @ in class names to
	@@ when processing DOCSTRINGS files.

2009-11-30  John W. Eaton  <jwe@octave.org>

	* interpreter/Makefile.a (nodist_octave_TEXINFOS): Add
	contributors.texi and $(MUNGED_TEXI_SRC) to the list.
	(dist_octave_TEXINFOS): Delete.
	(DISTCLEANFILES, all_octave_TEXINFOS): New variables.
	($(srcdir)/octave.info, octave.dvi, octave.pdf,	octave.html):
	Depend on $(all_octave_TEXINFOS), not $(octave_TEXINFOS).
	(octave.ps): Depend on .dvi file and EPS files, but not .texi
	source files.

2009-11-27  David Bateman  <dbateman@free.fr>

	* doc/interpreter/contributors.in: Add Kacper Kowalik.

2009-11-27  David Bateman  <dbateman@free.fr>

	* interpreter/install.txi: Document that curl libraries impact ftp
	objects.
	* interpreter/system.txi: Document the ftp objects

2009-11-25  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am:
	Simplify doc-cache handling in Makefile.am to use only install-data-local
	target

2009-11-24  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am:
	Correct Makefile so that it halts on error when unable to build doc-cache

2009-11-23  Rik <octave@nomad.inbox5.com>

	* faq/Makefile.am, interpreter/Makefile.am, liboctave/Makefile.am:
	Stop distribution of conf.texi by autotools.  conf.texi must be re-made
	from conf.texi.in during configure step

2009-11-23  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Add . to SUBDIRS to force automake to compile this
	directory, and make conf.texi, before recursively compiling SUBDIRS which
	depend on conf.texi

2009-11-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Add DISTCLEANFILES macro so that generated conf.texi can be 
	cleaned by automake.

2009-11-10  John W. Eaton  <jwe@octave.org>
